# py_proj_br_ilan

./: README.md
location_finder/: app.py  jpg_coordinates_extractor.py  pyproject.toml
location_finder/location_finder/: map_opener.py  test2.py
