[tool.poetry]
name = "location-finder"
version = "0.1.0"
description = ""
authors = ["nadavgk <nadavgk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
